opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/core_profiler"
bug-reports: "https://github.com/janestreet/core_profiler/issues"
dev-repo: "https://github.com/janestreet/core_profiler.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "core_profiler" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core"
  "core_extended"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
  "re2"
  "textutils"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Profiling library

Core_profiler is a library that helps you profile programs and
estimate various costs.
"
