opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/core_profiler"
bug-reports: "https://github.com/janestreet/core_profiler/issues"
dev-repo: "git+https://github.com/janestreet/core_profiler.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core"
  "core_extended"
  "ppx_jane"
  "re2"
  "textutils"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Profiling library

Core_profiler is a library that helps you profile programs and
estimate various costs.
"
