opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_profiler"
bug-reports: "https://github.com/janestreet/core_profiler/issues"
dev-repo: "git+https://github.com/janestreet/core_profiler.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_profiler/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "core_kernel"
  "core_unix"
  "ppx_jane"
  "re2"
  "shell"
  "textutils"
  "textutils_kernel"
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Profiling library"
description: "
Core_profiler is a library that helps you profile programs and
estimate various costs.
"
